<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/add_subject"
        android:title="@string/courses"
        app:showAsAction="never" />

    <item
        android:id="@+id/portfolio"
        android:title="@string/portfolio_details"
        app:showAsAction="never" />

    <item
        android:id="@+id/students"
        android:title="@string/students"
        app:showAsAction="never" />

    <item
        android:id="@+id/requests"
        android:title="@string/requests"
        app:showAsAction="always"
        android:icon="@drawable/ic_add_friend"/>

    <item
        android:id="@+id/logout"
        android:title="@string/logout"
        app:showAsAction="never" />

</menu>