<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".teacher.PortfolioDetailsActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="?attr/actionBarSize"
        android:theme="@style/MyCustomStyle">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/portfolio"
            android:textColor="@color/white"
            android:textSize="22sp"
            android:typeface="monospace" />

    </androidx.appcompat.widget.Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:orientation="vertical">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:padding="10dp"
            android:text="@string/portfolio_details"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:typeface="serif" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:paddingBottom="5dp"
            android:text="@string/education"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <Spinner
            android:id="@+id/spn_education"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/last_name"
            android:paddingStart="10dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:paddingBottom="5dp"
            android:text="@string/specialization"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/et_speclization"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="@string/email"
            android:hint="@string/specialization"
            android:imeOptions="actionNext"
            android:inputType="textCapWords"
            android:paddingStart="10dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:paddingBottom="5dp"
            android:text="@string/experience"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/et_experience"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="@string/experience"
            android:hint="@string/experience"
            android:imeOptions="actionDone"
            android:inputType="numberDecimal"
            android:paddingStart="10dp" />


        <Button
            android:id="@+id/btn_update_portfolio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/roundedbutton_bg"
            android:onClick="onClick"
            android:text="@string/update_portfolio"
            android:textColor="@color/white" />

    </LinearLayout>

</RelativeLayout>