<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".student.StudentProfileActivity">


    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="?attr/actionBarSize"
        android:theme="@style/MyCustomStyle">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/profile"
            android:textColor="@color/white"
            android:textSize="22sp"
            android:typeface="monospace" />

    </androidx.appcompat.widget.Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerInParent="true"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:padding="10dp"
            android:text="@string/student_s_profile"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:typeface="serif" />

        <EditText
            android:id="@+id/et_first_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="@string/first_name"
            android:imeOptions="actionNext"
            android:inputType="textCapWords"
            android:padding="10dp"
            android:autofillHints="@string/first_name" />

        <EditText
            android:id="@+id/et_last_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="@string/last_name"
            android:imeOptions="actionNext"
            android:inputType="textCapWords"
            android:padding="10dp"
            android:autofillHints="@string/last_name" />

        <EditText
            android:id="@+id/et_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="@string/email"
            android:imeOptions="actionNext"
            android:inputType="textEmailAddress"
            android:padding="10dp"
            android:autofillHints="@string/email" />

        <EditText
            android:id="@+id/et_telephone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="@string/telephone"
            android:imeOptions="actionNext"
            android:inputType="phone"
            android:padding="10dp"
            android:autofillHints="@string/telephone" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            android:weightSum="2">

            <EditText
                android:id="@+id/et_address"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.8"
                android:enabled="false"
                android:hint="@string/address"
                android:imeOptions="actionNext"
                android:inputType="text"
                android:padding="10dp"
                android:textColor="@color/black"
                android:autofillHints="@string/address" />

            <ImageButton
                android:id="@+id/btn_getLocation"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_weight="0.2"
                android:background="@null"
                android:onClick="onClick"
                android:src="@drawable/ic_location"
                tools:ignore="ContentDescription" />

        </LinearLayout>

        <EditText
            android:id="@+id/et_city"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="@string/city"
            android:imeOptions="actionDone"
            android:inputType="textCapWords"
            android:padding="10dp"
            android:autofillHints="@string/city" />

        <TextView
            android:id="@+id/tv_change_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/change_password"
            android:gravity="center"
            android:layout_marginTop="10dp"
            android:onClick="onClick"/>

        <Button
            android:id="@+id/btn_update_profile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/roundedbutton_bg"
            android:text="@string/update_profile"
            android:textColor="@color/white"
            android:onClick="onClick"/>


    </LinearLayout>

</RelativeLayout>